# DinD-Action-Runner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bot.py  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  webhook.py
app/: dynamic_runner.py  inspector.py  integration.py  pem_fingerprint.py  validate_signature.py
config/: config.py
docker/webhook/: webhook.Dockerfile
docker/workspace/: root.crontab  workspace.Dockerfile  workspace.entrypoint.sh
docs/: architecture-diagram.html  dind-container-job-architecture.md
enums/: headers.py
hooks/: job-completed.sh
tests/: conftest.py  test_bot.py  test_config.py  test_dynamic_runner.py  test_inspector.py  test_integration.py  test_pem_fingerprint.py  test_validate_signature.py
